# Orion4D_layer_manager

./: LICENSE  README.md  __init__.py  drop_shadow_node.py  gradient_fill_node.py  interactive_crop_node.py  layer_manager_node.py  pyproject.toml  requirements.txt
presets_gradients/: Black to White Linear.json  Warm Radial.json
presets_shadows/: Hard Shadow.json  Soft Shadow.json
web/: drop_shadow.js  drop_shadow_app.css  drop_shadow_app.html  drop_shadow_app.js  gradient_fill.js  gradient_fill_app.css  gradient_fill_app.html  gradient_fill_app.js  interactive_crop.js  interactive_crop_app.css  interactive_crop_app.html  interactive_crop_app.js  layer_manager.js  layer_manager_app.css  layer_manager_app.html  layer_manager_app.js
