[project]
name = "orion4d_layer_manager"
description = "A custom layer editor for ComfyUI with three utilities  (drop shadow editor, crop editor, and gradient editor)."
version = "1.0.0"
license = "MIT" 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = []

[project.urls]
Repository = "https://github.com/orion4d/Orion4D_layer_manager"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/orion4d/Orion4D_layer_manager/wiki"
"Bug Tracker" = "https://github.com/orion4d/Orion4D_layer_manager/issues"

[tool.comfy]
PublisherId = "orion4d"
DisplayName = "Orion4D_layer_manager"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

